# Replibyte

./: .dockerignore  .gitignore  404.html  CNAME  Cargo.toml  Dockerfile  LICENSE  README.md  TRANSFORMERS.md  chinook_dump_0321.sql  docker-compose-dev.yml  docker-compose-mongo.yml  docker-compose-mongodb-minio.yml  docker-compose-mongodb.yml  docker-compose-mysql-minio.yml  docker-compose-mysql.yml  docker-compose-postgres-minio.yml  docker-compose-postgres.yml  docker-compose.yml  index.html  mysql  release.sh  search-index-docs-default-current.json  sitemap.xml
.github/workflows/: build-and-test.yml  on-release.yml  on-tag-homebrew.yml  on-tag.yml  publish-image.yaml  release-tag.yml  release.yml  website.yml
assets/css/: styles.2532f616.css  styles.91c3e0a5.css  styles.a2a76a6c.css  styles.df3a1616.css
assets/js/: 009f1e98.1b0523f2.js  009f1e98.26da3ee0.js  009f1e98.5e142ed1.js  009f1e98.83019226.js  009f1e98.87e76802.js  009f1e98.d951a36d.js  009f1e98.ec18f045.js  009f1e98.ee6db8d8.js  0319d898.647c83f2.js  0386d0c0.35671651.js  0480b142.01953065.js  0480b142.3c96c6b9.js  0480b142.90cd457a.js  0480b142.d63a08c1.js  0480b142.e19251f5.js  0b33f508.b3cf8153.js  0f0e794f.4754799d.js  0f0e794f.81dcfecb.js  0f0e794f.b465f268.js  0f0e794f.e67ff0d2.js  15c229b3.1cbeb22d.js  15c229b3.2d93374f.js  15c229b3.404cbaf1.js  15c229b3.a2bd029f.js  15c229b3.a34f99d8.js  17896441.13140db9.js  1a53237b.59d12324.js  1a53237b.66df66ed.js  (+185 more)
docker/: exec.sh
docs/: DESIGN.md  TRANSFORMERS.md
dump-parser/: Cargo.toml  README.md
dump-parser/benches/: my_benchmark.rs
dump-parser/src/: errors.rs  lib.rs  utils.rs
dump-parser/src/mongo/: mod.rs
dump-parser/src/mongodb/: mod.rs
dump-parser/src/mysql/: mod.rs  mysql.pest
dump-parser/src/postgres/: mod.rs  tokenizer.rs
examples/: destination-postgres.yaml  replibyte.yaml  source-and-dest-mongodb-bridge-minio.yaml  source-and-destination-postgres.yaml  source-mysql-bridge-minio.yaml  source-mysql.yaml  source-postgres-bridge-minio.yaml  source-postgres-with-env-vars.yaml  source-postgres-with-gcp-datastore.yaml  source-postgres-with-no-transformers.yaml  source-postgres-with-skip.yaml  source-postgres.yaml  wasm-transformer-reverse-string.wasm  with-encryption.yaml  with-local-disk-datastore.yaml  with-skip.yaml  with-subset-and-transformer.yaml  with-transformer-options.yaml
replibyte/: Cargo.toml  README.md
replibyte/src/: cli.rs  config.rs  connector.rs  database.rs  lib.rs  main.rs  runtime.rs  tasks.rs  telemetry.rs  transformer.rs  types.rs  utils.rs
replibyte/src/bridge/: mod.rs  s3.rs
replibyte/src/commands/: backup.rs  dump.rs  mod.rs  restore.rs  source.rs  transformer.rs
replibyte/src/datastore/: local_disk.rs  migration.rs  mod.rs  s3.rs
replibyte/src/destination/: docker.rs  generic_stdout.rs  mod.rs  mongodb.rs  mongodb_docker.rs  mongodb_stdout.rs  mysql.rs  mysql_docker.rs  mysql_stdout.rs  postgres.rs  postgres_docker.rs  postgres_stdout.rs
replibyte/src/migration/: mod.rs  rename_backups_to_dumps.rs  update_version_number.rs
replibyte/src/source/: mod.rs  mongo.rs  mongo_stdin.rs  mongodb.rs  mongodb_stdin.rs  mysql.rs  mysql_stdin.rs  postgres.rs  postgres_stdin.rs  transformer.rs
replibyte/src/tasks/: full_backup.rs  full_dump.rs  full_restore.rs  mod.rs
replibyte/src/transformer/: credit_card.rs  custom_wasm.rs  email.rs  first_name.rs  keep_first_char.rs  mod.rs  phone_number.rs  random.rs  redacted.rs  transient.rs
replibyte/tests/: mysql.rs
src/: database.rs  main.rs  tasks.rs
subset/: Cargo.toml  README.md
website/: README.md  docusaurus.config.js  package-lock.json  package.json
(+100 files in other folders)
