[package]
name = "replibyte"
version = "0.1.0"
edition = "2021"
authors = ["Qovery"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dump-parser = { path = "../dump-parser" }
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
uriparse = "0.6"
aws-config = "0.8"
aws-sdk-s3 = "0.8"
clap = { version = "3.1", features = ["derive"] }
