[package]
edition = "2021"
version = "0.1.0"
name = "replibyte"
authors = ["Qovery"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
uriparse = "0.6"
anyhow = "1.0.56"
serde_yaml = "0.8"
serde_json = "1.0"
aws-config = "0.9.0"
aws-smithy-client = "0.39.0"
aws-smithy-http = "0.39.0"
aws-sdk-s3 = "0.9.0"
aws-types = "0.9.0"
tokio = { version = "1", features = ["full"] }
rustls = "0.20.4"
dump-parser = { path = "../dump-parser" }
clap = { version = "3.1", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
lazy_static = "1.4.0"
fake = "2.4"
log = "0.4"
env_logger = "0.9"
prettytable-rs = "0.8"
timeago = "0.3"
indicatif = "0.16"
http = "0.2"
flate2 = "1.0"
bson = "2.1"
